# COREPaperRepro

./: .gitignore  README.md  SOURCE.md  corepaper_tasks.py  pyproject.toml
config/: benchmark_manifest.json  experiments_smoke.json  feedback_loop_policy.json  literature_queries.json  literature_queries_iros2026.json  visual_identity.json
config/benchmarks/: baseline_calibration_targets.json  experiments_ablation.json  experiments_adversarial_stress_generated.json  experiments_cross_embodiment_proxy_recent.json  experiments_external_baselines.json  experiments_external_baselines_n14.json  experiments_library_lane.json  experiments_maniskill_proxy_recent.json  experiments_metaworld_recent_baselines.json  experiments_metaworld_seedexp_adaptmanip_method.json  experiments_metaworld_seedexp_adaptmanip_method_n30.json  experiments_metaworld_seedexp_ext2_method.json  experiments_metaworld_seedexp_latency_method.json  experiments_metaworld_seedexp_latency_method_n30.json  experiments_metaworld_slice.json  experiments_o2o_proxy_recent.json  experiments_recent_paper_baselines.json  experiments_robustness.json  (+4 more)
docs/: notation_guide.md  plan.md  repo_structure.md  versioning.md  visual_identity.md
paper/: manuscript.tex  references.bib
scripts/: validate_all.py  validate_completion.py  validate_planning_docs.py  validate_research_protocols.py  validate_writing_assets.py
tests/: test_feedback_artifacts.py  test_llm_counsel_critique.py  test_local_council_opinion.py  test_recent_baseline_official_parity.py  test_run_full_pipeline.py  test_version_bump.py
(+256 files in other folders)
